// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTilePrice /> renders ProductTilePrice 1`] = `
<div
  className="mfui-product-tile-price"
>
  <span
    className="mfui-product-tile-price__old-price"
  >
    <span
      className="mfui-product-tile-price__old-price-value"
    >
       
    </span>
  </span>
  <span
    className="mfui-product-tile-price__actual-price"
  >
    <ProductTileValue
      value="23423 uniteValue"
    />
     
    <span
      className="mfui-product-tile-price__payment-period"
    >
      uniteExtra
    </span>
  </span>
  <div
    className="mfui-product-tile-price__discount-condition"
  >
    title
  </div>
</div>
`;

exports[`<ProductTilePrice /> renders ProductTilePrice with discount 1`] = `
<div
  className="mfui-product-tile-price mfui-product-tile-price_discount"
>
  <span
    className="mfui-product-tile-price__old-price"
  >
    <span
      className="mfui-product-tile-price__old-price-value"
    >
      23423 uniteValue
    </span>
  </span>
  <span
    className="mfui-product-tile-price__actual-price"
  >
    <ProductTileValue
      value="100 uniteValue"
    />
     
    <span
      className="mfui-product-tile-price__payment-period"
    >
      uniteExtra
    </span>
  </span>
  <div
    className="mfui-product-tile-price__discount-condition"
  >
    title
  </div>
</div>
`;
